--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,9 @@ matplotlib
 scikit-learn
 seaborn
 pyYAML
+streamlit==1.49.1
 python-box==6.0.2
 joblib
 types-pyYAML
 ensure==1.0.2
-Flask
-Flask-cors
 -e .
