--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,32 +3,20 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://www.kaggle.com/datasets/sumedh1507/bmw-car-sales-dataset
+  data_path : notebooks/BMW_Car_Sales_Classification.csv
+  source_URL: https://www.kaggle.com/datasets/sumedh1507/bmw-car-sales-dataset # if you want to download from web
   local_data_file: artifacts/data_ingestion/BMW_Car_Sales_Classification.csv
-
-
-data_validation:
-  root_dir: artifacts/data_validation
-  unzip_data_dir: artifacts/data_ingestion/BMW_Car_Sales_Classification.csv
-  STATUS_FILE: artifacts/data_validation/status.txt
-
 
 data_transformation:
   root_dir: artifacts/data_transformation
   data_path: artifacts/data_ingestion/BMW_Car_Sales_Classification.csv
-
+  preprocessor_object_file: artifacts/data_transformation/preprocessor.pkl
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
 
 
 model_trainer:
   root_dir: artifacts/model_trainer
   train_data_path: artifacts/data_transformation/train.csv
   test_data_path: artifacts/data_transformation/test.csv
-  model_name: model.joblib
-
-
-
-model_evaluation:
-  root_dir: artifacts/model_evaluation
-  test_data_path: artifacts/data_transformation/test.csv
-  model_path: artifacts/model_trainer/model.joblib
-  metric_file_name: artifacts/model_evaluation/metrics.json
+  model_name: artifacts/model_trainer/bmw_model.pkl
