--- a/params.yaml
+++ b/params.yaml
@@ -1,11 +1,11 @@
 LogisticRegression:
-  penalty: l2
-  C: 1.0
-  solver: lbfgs
-  max_iter: 100
+  penalty: [l2]
+  C: [1.0]
+  solver: [lbfgs]
+  max_iter: [100]
 
 DecisionTreeClassifier:
-  criterion: [gini, entropy, log_loss]
+  criterion: [gini, entropy]
   splitter: [best, random]
   max_depth: [null, 5, 10, 15, 20, 30, 50]
   min_samples_split: [2, 5, 10, 20]
@@ -19,7 +19,7 @@ SVC:
   degree: [2, 3, 4, 5]
 
 RandomForestClassifier:
-  n_estimators: [100, 200, 300, 500]
+  n_estimators: [100, 200]
   criterion: [gini, entropy, log_loss]
   max_depth: [null, 10, 20, 30, 50]
   min_samples_split: [2, 5, 10]
@@ -29,7 +29,7 @@ RandomForestClassifier:
 AdaBoostClassifier:
   n_estimators: [50, 100, 200, 300]
   learning_rate: [0.001, 0.01, 0.1, 1]
-  algorithm: [SAMME, SAMME.R]
+  algorithm: [SAMME]
 
 KNeighborsClassifier:
   n_neighbors: [3, 5, 7, 9, 11]
@@ -38,7 +38,7 @@ KNeighborsClassifier:
   p: [1, 2]
 
 XGBClassifier:
-  n_estimators: [100, 200, 300]
+  n_estimators: [100, 200]
   learning_rate: [0.01, 0.05, 0.1, 0.3]
   max_depth: [3, 5, 7, 10]
   min_child_weight: [1, 3, 5]
